--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@neondatabase/serverless": "^0.9.5",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.7",
     "babel-preset-expo": "^11.0.14",
     "dotenv": "^16.4.5",
     "expo": "^51.0.32",
