--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-heroicons": "^4.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.18.0",
     "react-native-maps-directions": "^1.9.0",
@@ -51,6 +52,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.7.1",
     "react-native-swiper": "^1.6.0",
     "react-native-tailwindcss": "^1.1.11",
     "react-native-vector-icons": "^10.2.0",
