--- a/app.json
+++ b/app.json
@@ -8,12 +8,20 @@
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "config": {
+        "googleMapsApiKey": "AIzaSyDa1olgsfiH0ktBXGGkG2P_PXy1f5bIUdE"
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
+      },
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyDa1olgsfiH0ktBXGGkG2P_PXy1f5bIUdE"
+        }
       }
     },
     "web": {
