--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.7.1",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-swiper": "^1.6.0",
     "react-native-tailwindcss": "^1.1.11",
     "react-native-vector-icons": "^10.2.0",
