--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native-maps-directions": "^1.9.0",
     "react-native-paper": "^5.12.5",
     "react-native-places-autocomplete": "^1.5.2",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
