--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.7",
     "babel-preset-expo": "^11.0.14",
     "dotenv": "^16.4.5",
     "expo": "^51.0.32",
@@ -45,6 +46,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-heroicons": "^4.0.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.14.0",
     "react-native-maps-directions": "^1.9.0",
@@ -62,7 +64,8 @@
     "react-native-web": "~0.19.10",
     "tailwindcss-react-native": "^1.7.10",
     "use-latest-callback": "^0.2.1",
-    "zustand": "^5.0.0-rc.2"
+    "zustand": "^5.0.0-rc.2",
+    "expo-image-picker": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
