--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "tailwindcss-react-native": "^1.7.10",
+    "twrnc": "^4.5.1",
     "use-latest-callback": "^0.2.1",
     "zustand": "^5.0.0-rc.2"
   },
