--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGODB_URI = mongodb+srv://it22564368:U9C33nhLRe5MMrIK@cluster0.x4zzk.mongodb.net/
+MONGODB_URI = mongodb+srv://AbhishekPeiris:abhi2001@cluster0.yiebxsw.mongodb.net/RideMate
 
