--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@neondatabase/serverless": "^0.9.5",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/native": "^6.1.18",
@@ -63,9 +64,7 @@
     "react-native-tailwindcss": "^1.1.11",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
-
     "tailwind-rn": "^4.2.0",
-
     "tailwindcss-react-native": "^1.7.10",
     "twrnc": "^4.5.1",
     "use-latest-callback": "^0.2.1",
