--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "axios": "^1.7.7",
     "babel-preset-expo": "^11.0.14",
     "dotenv": "^16.4.5",
-    "expo": "^51.0.32",
+    "expo": "52.0.0",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-image-picker": "~15.0.7",
